# mdsthin

./: .gitignore  Experimental.md  LICENSE  README.md  pyproject.toml
examples/: get_object.py  getmany.py  put_data.py  put_object.py  put_signal.py  putobject.py  simple.py
mdsthin/: __init__.py  connection.py  descriptors.py  exceptions.py  functions.py  message.py
mdsthin/MDSplus/: __init__.py
mdsthin/ext/: GetManyMany.py  __init__.py  tree.py
mdsthin/internals/: CvtConvertFloat.py  classdef.py  dtypedef.py  mdsdescrip.py  opcbuiltins.py  usagedef.py
mdsthin/mdstcl/: __main__.py
mdsthin/tdic/: __main__.py
mdsthin/test/: __init__.py  __main__.py  cmod_test.py  connection_test.py  descriptors_test.py  exceptions_test.py  run.py  serialize_test.py  write_test.py
scripts/: process_messages.py  process_opcodes.py
