[project]
name = "mdsthin"
description = "MDSplus Thin-Client implemented in pure python"
version = "1.5.0"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  {name = "Stephen Lane-Walsh", email = "slwalsh@psfc.mit.edu"},
]
requires-python = ">= 3.7"
dependencies = [
  "h5py",
  "numpy",
  "paramiko",
  "PyYAML",
  "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/MDSplus/mdsthin"
"Bug Reports" = "https://github.com/MDSplus/mdsthin/issues"
"Source" = "https://github.com/MDSplus/mdsthin/"

[tool.setuptools.packages.find]
namespaces = true
